--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "e:\\Documents\\python projects\\django projects\\beep\\benv\\Scripts\\python.exe",
+    "python.pythonPath": "C:\\Users\\Kenne\\Documents\\code\\projects\\bleep\\Scripts\\python.exe",
     "python.formatting.provider": "autopep8"
 }
